@@ -1,5 +1,7 @@
 Changes to Version 2.0-0
 
+  o Many changes to style of dialogs: tabs, Reset button
+
   o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).
 
   o Small fixes.
